=== master

* Add forbid_lazy_load plugin for forbidding lazy loading of associations, to help find N+1 issues (jeremyevans)

=== 5.30.0 (2020-03-01)

* Remove specs and old release notes from the gem to reduce gem size by over 40% (jeremyevans)

* When using Database#transaction :retry_on, call :before_retry option if retrying even if :num_retries is nil (jcmfernandes) (#1678)

* Support generated columns on SQLite 3.31+ using :generated_always_as and :generated_type options (jeremyevans)

=== 5.29.0 (2020-02-01)

* Recognize another disconnect error in the tinytds adapter (jeremyevans)

* Fix verbose warning in postgres adapter when using prepared statements and recent versions of ruby-pg (jeremyevans)

* Work correctly on Ruby 2.8+ by supporting second argument for initialize_clone (jeremyevans)

* Add empty_failure_backtraces plugin for empty backtraces for ValidationFailed and HookFailed exceptions, much faster on JRuby (jeremyevans)

* Add Dataset#json_serializer_opts to json_serializer plugin, allowing to set json_serializer options on a per-dataset basis (jeremyevans)

=== 5.28.0 (2020-01-01)

* Warn when calling Sequel::JDBC::Postgres::Dataset#with_fetch_size (jeremyevans) (#1665)

* Add exclude_or_null extension, for filtering datasets where the condition is false or NULL (jeremyevans)

* Add any_not_empty extension, for making Dataset#any? without a block mean !empty? (jeremyevans)

=== 5.27.0 (2019-12-01)

* Add Sequel::DEFAULT for a DEFAULT expression, useful for assigning to default values (jeremyevans)

* Make Postgres::ArrayOp#join in pg_array_ops extension work correctly on PostgreSQL <9.1 (jeremyevans)

* Make pg_enum extension work correctly on PostgreSQL 8.3-9.0 (jeremyevans)

* Emulate FILTER clause for aggregate functions using CASE on databases not supporting it directly (jeremyevans)

* Support ordering by NULLS FIRST/NULLS LAST without emulation on SQLite 3.30+ (jeremyevans)

=== 5.26.0 (2019-11-01)
