@@ -7,6 +7,7 @@
 <ul>
 <li>Associations:<ul>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationDependencies.html">association_dependencies</a>: Allows easy deleting, destroying, or nullifying associated objects when destroying a model object.</li>
+<li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationLazyEagerOption.html">association_lazy_eager_option</a>: Support :eager option when calling association method, for per-call eager loading when association is not cached.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationMultiAddRemove.html">association_multi_add_remove</a>: Allows adding/removing multiple associated objects in a single method call.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationPks.html">association_pks</a>: Adds the association_pks and association_pks= to *_to_many associations.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/AssociationProxies.html">association_proxies</a>: Changes the *_to_many association method to return a proxy instead of an array of objects.</li>
